# adbclone

./: .gitignore  README.md  pyproject.toml
src/: adbsync.py
src/ADBSync/: SAOIO.py  SAOLogging.py  __init__.py  argparsing.py
src/ADBSync/FileSystems/: Android.py  Base.py  Local.py
src/BetterADBSync/: SAOLogging.py  __init__.py  argparsing.py
src/BetterADBSync/FileSystems/: Android.py  Base.py  Local.py
